# crucible

./: .gitignore  CLAUDE.md  KICKOFF.md  README.md  WORKLIST.md  pyproject.toml
crucible/: __init__.py  capacity.py  cli.py  cpcv.py  ingest.py  metrics.py  pbo.py  psr.py  regime.py  verdict.py
examples/: capacity_curve.py  compare_cadence.py  gen_allocator_trials.py  gen_cyclicals_export.py  gen_schwab_trials.py  make_demo_data.py  verdict_allocator.py  verdict_allocator_regime.py  verdict_regime_captive.py  verdict_schwab.py  verdict_schwab_regime.py
tests/: test_capacity.py  test_ingest_allocator.py  test_ingest_allocator_regime.py  test_ingest_schwab.py  test_ingest_schwab_regime.py  test_pbo.py  test_psr.py  test_regime.py  test_regime_captive_real.py
tests/fixtures/: allocator_export.csv  cyclicals_export.csv  schwab_export.csv  schwab_regimes.csv
